[tool.poetry]
name = "vifdb"
version = "0.1.0"
description = "Atomically edit foundationdb.conf"
authors = ["Jay <jay@sentenai.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
ipython-nord-theme = "^0.1.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
